--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,3 +70,11 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+
+fos_rest:
+    routing_loader:
+        default_format: json
+
+
+nelmio_api_doc: ~
