Added JMS fosrest

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,7 @@ security:
 
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
     providers:
 #        default_provider:
